# AlgerClipboard-Plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: build.yml  release.yml
docs/plans/: 2026-03-23-spotlight-plugins-design.md
plugins/browser-bookmarks/: Cargo.toml  manifest.json
plugins/browser-bookmarks/frontend/: index.js
plugins/browser-bookmarks/src/: lib.rs
plugins/calculator/: manifest.json
plugins/calculator/frontend/: index.js
plugins/color-toolbox/: manifest.json
plugins/color-toolbox/frontend/: index.js
plugins/everything-search/: Cargo.toml  README.md  manifest.json
plugins/everything-search/frontend/: index.js
plugins/everything-search/src/: lib.rs
plugins/github-search/: Cargo.toml  manifest.json
plugins/github-search/frontend/: index.js
plugins/github-search/src/: lib.rs
plugins/history/: manifest.json
plugins/history/frontend/: index.js
plugins/ide-projects/: Cargo.toml  README.md  manifest.json
plugins/ide-projects/frontend/: index.js
plugins/ide-projects/src/: lib.rs
plugins/network-info/: Cargo.toml  manifest.json
plugins/network-info/frontend/: index.js
plugins/network-info/src/: lib.rs
plugins/password-generator/: manifest.json
plugins/password-generator/frontend/: index.js
plugins/timestamp/: manifest.json
plugins/timestamp/frontend/: index.js
plugins/url-opener/: manifest.json
plugins/url-opener/frontend/: index.js
plugins/web-search/: manifest.json
plugins/web-search/frontend/: index.js
registry/: plugins.json
scripts/: build.sh  package.sh
